fixed div "glowcard head" alignment

--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ html,body{
     align-items: center;
     width: 100%;
     height: 100%;
-    translate: 0px -91px;
+    translate: 0px -20%;
 }
 #contenthead-font{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -272,7 +272,7 @@ html,body{
 #glowcard-head{
     width: 100%;
     height: 80px;
-    translate: 0px -90px;
+    translate: 0px -169%;
     background-color: rgb(0, 0, 0);
     color: aliceblue;
     text-align: center;
